Documentation and files changed due to testing
